--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,340 @@
 /* место для вашего кода */
+
+.header {
+    display: grid;
+    grid-template-columns: 1fr min-content 1fr;
+    align-items: center;
+    padding: 92px  50px;
+}
+
+.header__links-list {
+    display: flex;
+    font-size: 18px;
+    gap: 30px;
+    text-transform: lowercase;
+}
+
+ul {
+    list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+    list-style-type: none;
+}
+
+ .header__links-list-item {
+    border-bottom: 1px solid;
+    text-decoration: underline;
+}
+
+.header__logo {
+    display: block;
+    width: 130px;
+}
+
+.header__logo-image {
+    height: 105px ;
+}
+
+.header__adress {
+    width: 210px;
+    font-style: normal;
+    margin: 0 0 0 194px;
+}
+
+.overlay {
+    position: absolute;
+    inset: 0;
+    background-color: #000;
+    opacity: .6;
+}
+
+
+.aligned-text {
+    display: block;
+}
+
+.aligned-text_center {
+    display: block;
+    line-height: 1;
+    margin-top: 20px;
+    text-align: center;
+}
+        
+.aligned-text_right {
+    display: block;
+    line-height: 1;
+    margin-top: 20px;
+    text-align: end;
+}
+
+.bet-button {
+    padding: 12px 30px;
+    background: transparent;
+    border: 1px solid #FFF;
+    font-style: normal;
+    font-weight: 400px;
+    font-size: 22px;
+    line-height: 26px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+
+.cover {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding: 162px 48px 48px;
+    background-image: url(../images/cover.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.cover__title {
+    margin-bottom: 140px;
+    font-style: normal;
+    width: 100%;
+    color: #ffffff;
+    font-family: Raleway, serif;
+    font-weight: 700;
+    font-size: 100px;
+    line-height: 115%;
+    letter-spacing: 0.3em;
+    text-transform: uppercase;
+    z-index: 1;
+}
+
+.cover__description {
+    display: flex;
+    gap: 78px;
+    justify-content: end;
+    align-items: center;
+    z-index: 1;
+}
+
+.cover__description-text {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 28px;
+    text-align: center;
+    text-transform: uppercase;
+    word-spacing: 18px;
+    color: #ffffff;
+}
+
+.lots {
+    padding: 181px 24px 0;
+}
+
+.lots__heading {
+    padding: 0 0 27px 40px;
+    font-size: 40px;
+    line-height: 47px;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.lots__card-list {
+    display: flex;
+    gap: 25px;
+    list-style: none;
+}
+
+.lots__card-list-item {
+width: 334px;
+min-height: 563px;
+}
+
+.card-link {
+    text-decoration: none;
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 51px 40px 48px;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.card_type_film {
+background-image: url("../images/card-lot-01.jpg");
+}
+
+.card_type_book {
+background-image: url("../images/card-lot-02.jpg");
+}
+
+.card_type_picture {
+background-image: url(../images/card-lot-03.jpg);
+}
+
+.card__title {
+   text-decoration: underline; 
+   font-size: 22px;
+   line-height: 26px;
+   text-transform: uppercase;
+   color: #FFF;
+   z-index: 1;
+   font-weight: 700;
+}
+
+.card__text {
+    text-decoration: none;
+    font-size: 20px;
+    line-height: 24px;
+    color:#FFF;
+    z-index: 1;
+    font-weight: 400;
+}
+
+.letter-spacing-extended {
+    letter-spacing: 0.6em;
+}
+
+.no-letter-spacing {
+    letter-spacing: 0;
+}
+
+.lots__look-more-link {
+   line-height: 24px;
+   font-size: 20px;
+   padding: 30px 0 0 40px;
+   display: inline-block;
+}
+
+.about {
+    padding: 181px 24px 0;
+    flex-basis: 300px;
+    flex-grow: 1;
+}
+
+.about__column {
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+}
+
+.about__logo {
+   display: flex;
+   height: 240px; 
+   width: 240px;
+   border-radius: 100%;
+   background-color: #000;
+   flex-wrap: wrap;
+   text-align: center;
+   flex-direction: column;
+   margin: 0 50px 0 40px;
+}
+
+.about__logo-image {
+    display: flex;
+    width: 60%;
+    margin: auto;
+    vertical-align: top;
+}
+
+.about__title {
+    flex-direction: row;
+
+}
+
+.about__text-title {
+    padding: 0 0 27px 0px;
+    font-size: 40px;
+    line-height: 47px;
+    text-transform: uppercase;
+    font-weight: 800;
+    margin-top: 50px;
+    float: right;
+    }
+
+.about__text {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    margin-top: 48px;
+    margin-right: 0;
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 400;
+    text-transform: none;
+    width: 700px;
+     
+}
+
+
+
+.footer {
+    display: flex;
+    grid-template-columns: 1fr max-content 1fr;
+    justify-content: space-between;
+    padding: 180px 50px 87px 50px; 
+    
+}
+
+.footer__adress {
+    width: 210px;
+    text-align: left;
+    margin: 0;
+    font-style: normal;
+    font-size: 18px;
+}
+
+.footer__menu-list {
+    list-style-type: none;
+    text-align: center;
+    vertical-align: top;
+    text-transform: lowercase;
+    font-size: 18px;
+    }
+
+ .footer__menu-links-item {
+    text-align: center;
+}  
+
+ .footer__menu-list-item {
+    display: flex;
+    text-align: center;
+}
+
+.footer__social-list {
+    display: flex;
+}
+
+.footer__social-list-item {
+    display: flex;
+    gap: 50px;
+    list-style: none;
+     
+}
+
+.footer__social-icon {
+    display: flex;
+    gap: 16px;
+    list-style: none; 
+}
+
+.footer__social-icon-yt {
+    height: 46px;
+}
+
+.footer__social-icon-vk {
+    height: 46px; 
+}
+
+.footer__social-icon-pin {
+    height: 46px;
+}
+
+
+
+    
+    
