--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 *,
 *::before,
 *::after {
@@ -26,7 +31,7 @@ blockquote {
 }
 
 a {
-  color: inherit;
+            color: inherit;
 }
 
 img {
