--- a/styles/style.css
+++ b/styles/style.css
@@ -46,10 +46,6 @@
   opacity: 0.6;
 }
 
-.aligned-text {
-  display: block;
-}
-
 .aligned-text_center {
   display: block;
   line-height: 1;
@@ -65,7 +61,7 @@
 }
 
 .bet-button {
-  padding: 12px 30px;
+  padding: 12px 32px;
   background: transparent;
   border: 1px solid #fff;
   font-style: normal;
@@ -81,11 +77,15 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  padding: 162px 48px 48px;
+  padding: 162px 50px 50px;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+.line-height_115 {
+  line-height: 115%;
 }
 
 .cover__title {
@@ -96,7 +96,7 @@
   font-family: Raleway, serif;
   font-weight: 700;
   font-size: 100px;
-  line-height: 115%;
+  line-height: 100%;
   letter-spacing: 0.3em;
   text-transform: uppercase;
   z-index: 1;
@@ -104,7 +104,7 @@
 
 .cover__description {
   display: flex;
-  gap: 84px;
+  gap: 82px;
   justify-content: end;
   align-items: center;
   z-index: 1;
@@ -122,7 +122,7 @@
 }
 
 .lots {
-  padding: 181px 24px 0;
+  padding: 178px 24px 0;
 }
 
 .lots__heading {
@@ -207,7 +207,7 @@
 }
 
 .about {
-  padding: 181px 24px 0;
+  padding: 185px 24px 0;
 }
 
 .about__column {
@@ -255,9 +255,14 @@
 
 .footer {
   display: flex;
-  grid-template-columns: 1fr max-content 1fr;
+  grid-template-columns: 1fr min-content 1fr;
   justify-content: space-between;
   padding: 180px 50px 87px 50px;
+  position: relative;
+}
+
+.letter_spacing_1 {
+  letter-spacing: 1;
 }
 
 .footer__adress {
@@ -266,8 +271,7 @@
   text-align: left;
   margin: 0;
   font-style: normal;
-  font-size: 19px;
-  letter-spacing:inherit;
+  font-size: 18px;
   line-height: 1.3;
 }
 
@@ -277,6 +281,10 @@
   text-transform: lowercase;
   font-size: 18px;
   text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 60%;
+  transform: translate(-50%,-50%);
 }
 
 .footer__menu-links-item {
@@ -298,8 +306,5 @@
   display: flex;
   gap: 16px;
   list-style: none;
-}
-
-.footer__social-icon {
   height: 46px;
 }
